<resources>
    <string name="app_name">Battery Alert for Wear</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="enabled">Enabled</string>
    <string name="disbled">Disabled</string>
    <string name="legend_phone">Phone</string>
    <string name="time_place_holder">00:00</string>
    <string name="service_state">ENABLED</string>
    <string name="legend_watch">Watch</string>
    <string name="charge_state">charge_state</string>
    <string name="chaging_battery_status">Charging Battery</string>
    <string name="alert_title">Battery Alert</string>
    <string name="full_battery_text">Your Battery is fully charged</string>
    <string name="key_service_enable">service_enable</string>
    <string name="label_service_enable">Enable Service</string>
    <string name="developed_by">Developed by Rogerio Souza</string>
    <string name="pref_header_low_battery">Low Battery Alert</string>
    <string name="label_low_battery_alert">Enable low level alert</string>
    <string name="key_low_battery_alert">low_battery_alert</string>
    <string name="label_battery_low_level">Battery Level</string>
    <string name="key_battery_low_level">battery_low_level</string>
    <string name="pref_header_phone">Phone</string>
    <string name="key_low_batery_level">key_low_batery_level</string>
    <string name="title_low_battery_percent">Alert when Battery is lower then</string>
    <string name="ringtone_low_battery">Ringtone Low Battery</string>
    <string name="notifcation_low_battery">Notification Tone</string>
    <string name="pref_header_wear">Wearable</string>
    <string name="key_low_battery_wear_alert">key_low_battery_wear_alert</string>
    <string name="key_low_batery_wear_level">key_low_batery_wear_level</string>

</resources>
