<PreferenceScreen
    android:key="preferences"
    xmlns:cd2="http://schemas.android.com/com.coded2"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <PreferenceCategory
            android:title="@string/pref_header_general">
                <SwitchPreference
                    android:title="@string/label_service_enable"
                    android:key="@string/key_service_enable"
                    android:defaultValue="true"/>
        </PreferenceCategory>

       <PreferenceCategory android:title="@string/pref_header_phone">
        <SwitchPreference
            android:title="@string/label_low_battery_alert"
            android:key="@string/key_low_battery_alert"
            android:defaultValue="false"/>
       </PreferenceCategory>
       <EditTextPreference
           android:key="@string/key_low_batery_level"
           android:title="@string/title_low_battery_percent"

           android:defaultValue="15"/>

</PreferenceScreen>